fix 22 Vii guia 1

--- a/1-guia/ejercicios-1/ej-22-1.tex
+++ b/1-guia/ejercicios-1/ej-22-1.tex
@@ -116,12 +116,14 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
 
         \bigskip
 
-        \textit{Reflexiva:}\par
+        \textit{Reflexiva:}
+
         $(a,b) \relacion (a,b) \sisolosi ba = k\cdot ab$ con $k=1$.
         Se concluye que $\relacion$ sí es \textit{reflexiva}.
 
         \textit{Simétrica:}
-        Contraejemplo:
+
+        Hago un contraejemplo,
         $$
           \llave{l}{
             (1,2) \relacion (3,3) \sisolosi 2 \cdot 3 \igual{def} k\cdot 1 \cdot 3 = 3 \cdot k \\
@@ -130,7 +132,8 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
         $$
         La relación no es simétrica, dado que no hay un $h \en \enteros$ tal que $3 = 6 \cdot h$
 
-        \textit{Anti-Simétrica:}\par
+        \textit{Anti-Simétrica:}
+
         Contraejemplo:
         Tomo dos valores distintos y veo que están relacionados
         $$
@@ -165,3 +168,8 @@ Voy a estar usando cosas del \hyperlink{teoria-1:relaciones}{resumen teórico de
         ni de \textit{orden}.
 
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{\neverGonnaGiveYouUp}{Magui \youtube}
+\end{aportes}
