--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -322,8 +322,8 @@
 \def\mindExplosion{https://www.youtube.com/watch?v=9CS7j5I6aOc}
 
 %%% Iconos más usados
-\def\github{\faIcon{github}}
+\def\github{\color{black}{\faIcon[regular]{github}}}
 \def\instagram{\faIcon{instagram}}
 \def\tiktok{\faIcon{tiktok}}
-\def\linkedin{\faIcon{linkedin}}
-\def\youtube{\faIcon{youtube}}
+\def\linkedin{\blue{\faIcon{linkedin}}}
+\def\youtube{\color{red!70}{\faIcon{youtube}}}
