--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -28,6 +28,7 @@
 \usepackage{soul} % Para tachar texto en text y math mode
 \usepackage{polynom} % para división de polinomios y mcd
 \usepackage{fontawesome5} % fuentes "extras"
+\usepackage{simpleicons} % fuentes "extras"
 \usepackage{venndiagram} % Para los diagramas de Venn
 \usepackage{qrcode} % genera código qr
 \usepackage{xspace}% para control de espacios en macros
