agrego aportes ejc 12

--- a/1-guia/ejercicios-1/ej-12-1.tex
+++ b/1-guia/ejercicios-1/ej-12-1.tex
@@ -267,4 +267,5 @@
   %\aporte{url}{nombre icono}
   \item \aporte{\dirRepo}{Nad Garraz \github}
   \item \aporte{https://www.instagram.com/juaanparajo}{Juan Parajó \instagram}
+  \item \aporte{https://github.com/APNieto/}{Ale Nieto \github}
 \end{aportes}
