--- a/1-guia/ejercicios-1/ej-30-1.tex
+++ b/1-guia/ejercicios-1/ej-30-1.tex
@@ -68,7 +68,7 @@
 
         Sí es \textit{sobreyectiva}. Me formo una sucesión de números pares:
         $$
-          \paratodo m \en \naturales, a_m = 2
+          \paratodo m \en \naturales, a_m = 2m
           \quad\entonces
           f(a_m) = f(2m) = \frac{2m}{2} = m
         $$
@@ -100,8 +100,9 @@
           }
         $$
 
-        La función es \textit{inyectiva} y \textit{sobreyectiva}.
+        La función es \textit{inyectiva} y \textit{sobreyectiva}. Calculo la inversa:
         $$
+          f^{-1}: \naturales \to \enteros,\quad
           \cajaResultado{
             f^{-1}(n) =
             \llave{cl}{
