Modifico estética y QR

--- a/1-guia/ejercicios-1/ej-30-1.tex
+++ b/1-guia/ejercicios-1/ej-30-1.tex
@@ -66,14 +66,17 @@
           f(8) = f(3) \text{ con {\tiny \color{lightgray}{dah!}} } 8 \neq 3
         $$
 
-        Sí es \textit{sobreyectiva}. Me formo una sucesión de números pares:
+        \underline{Sí} es \textit{sobreyectiva}.
+
+        Me formo una sucesión de números pares para \textit{evaluar a la función
+          en cosas convenientes}:
         $$
           \paratodo m \en \naturales, a_m = 2m
           \quad\entonces
           f(a_m) = f(2m) = \frac{2m}{2} = m
         $$
-        Se desprende que una parte de la función genera \textit{todos los números naturales},
-        así que $\im(f) = \naturales$, por lo tanto la función es \textit{sobreyectiva}.
+        Se desprende que tan solo con la parte $\frac{n}{2}$, la imagen de la función genera todo $\naturales$,
+        así que como $\im(f) = \naturales$, $f$ es \textit{sobreyectiva}.
 
         No es \textit{biyectiva}, no tiene inversa.
 
