--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -230,6 +230,9 @@
 \def\update{\tiny
   {\today\ @ \currenttime}
 }
+\def\updateDos{
+  {\today\ @ \currenttime}
+}
 
 % Contributors
 \newcommand{\aporte}[2]{
