--- a/macros/disclaimer.tex
+++ b/macros/disclaimer.tex
@@ -39,8 +39,17 @@ Dirigido para aquél que esté listo para leerlo, o no tanto. Va con onda.\par \
     Hacer un parcial bien lleva entre 3 y 4 horas. Así que si vos en 4 horas "hiciste" 3 o 4 parciales, \textit{algo raro debe haber}.
     A los parciales se va a \textbf{pensar} y eso hay que practicarlo desde el primer día.\par\bigskip
 
-    Mirá los videos de las teóricas \href{\videosTeresa}{de Teresa que son buenísimos \faIcon{youtube}}.\par\medskip
-    Videos de prácticas de pandemia, complemento extra: \href{\videosPracticas}{Prácticas Pandemia \faIcon{youtube}}.\par\bigskip
+    Mirá los videos de las teóricas:
+
+          \href{\videosTeresa}{de Teresa que son buenísimos \faIcon{youtube}}.
+
+          \medskip
+
+    Videos de prácticas de pandemia, complemento extra:
+
+          \href{\videosPracticas}{Prácticas Pandemia \faIcon{youtube}}.
+          
+          \bigskip
 
     Los ejercicios que se dan en clase suelen ser similares a los parciales,
     a veces más difíciles, repasalos siempre \href{\justDoIt}{Just Do IT \faIcon{jedi}\faIcon{hand-sparkles}\faIcon{jedi}!}
