--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -18,8 +18,7 @@
 
 \fancyfoot[EL]{
   \href{\dirRepo}{\small\github
-    ¡Aportá! Correcciones, subiendo ejercicios,
-    \yellow{\FiveStar} al repo, críticas, todo sirve.}
+    ¡Aportá con correcciones, subiendo ejercicios, \yellow{\FiveStar} al repo, críticas, todo sirve.}
 }    % pie izquierdo pares
 \fancyfoot[OL]{
   \href{\dirTelegram}{\small\faIcon{telegram} ¿Errores? Avisá así se corrige y ganamos todos.
