--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -53,12 +53,16 @@
 % En general quiero que este paquete sea el último en importarse
 \usepackage{hyperref} % para que haya links navegables en el PDF
 \hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    %filecolor=magenta,
-    urlcolor=OliveGreen!90!black,
     pdftitle={Apunté Único de Álgebra I},
-    pdfauthor={Por los alumnos y exalumnos de Álgebra I}
+    pdfauthor={Por los alumnos y exalumnos de Álgebra I},
+    pdfkeywords={algebra 1, resueltos},
+    colorlinks=true,
+    pdfborder={0,0,0}, % sin border
+    citecolor=cyan,
+    refcolor=magenta,
+    linkcolor=blue!80!red,
+    filecolor=green,
+    urlcolor=red!70!white,
     }
 \urlstyle{same}
 
