--- a/3-guia/ejercicios-3/ej-6-3.tex
+++ b/3-guia/ejercicios-3/ej-6-3.tex
@@ -1,13 +1,12 @@
-\ejercicio
+\begin{enunciado}{\ejercicio}
 
-\begin{enumerate}[label=\roman*)]
-  \item ¿Cuántos números de exactamente 4 cifras (no pueden empezar con 0) hay que no contienen al dígito 5?
-  \item ¿Cuántos números de exactamente 4 cifras hay que contienen al dígito 7?
-\end{enumerate}
+  \begin{enumerate}[label=\alph*)]
+    \item ¿Cuántos números de exactamente 4 cifras (no pueden empezar con 0) hay que no contienen al dígito 5?
+    \item ¿Cuántos números de exactamente 4 cifras hay que contienen al dígito 7?
+  \end{enumerate}
+\end{enunciado}
 
-\separadorCorto
-
-\begin{enumerate}[label=\roman*)]
+\begin{enumerate}[label=\alph*)]
   \item
 
         Como las cifras no pueden ser 5 y la primer cifra no puede empezar con 0, se tiene lo siguiente:
@@ -15,7 +14,7 @@
         $
           \begin{array}{r|cccc}
             \text{cifras}        & \_ & \_ & \_ & \_ \\
-            \text{posibilidades} & 8               & 9               & 9               & 9
+            \text{posibilidades} & 8  & 9  & 9  & 9
           \end{array}
         $
         $\entonces$ hay $8 \cdot 9^3 = 5832$ posibiles números
