--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -108,7 +108,8 @@
 \def\Tilde{\quad\checkmark}
 \def\ytext{\quad\text{y}\quad}
 \def\otext{\quad\text{o}\quad}
-\newcommand{\cajaResultado}[1]{\fcolorbox{orange}{white}{\ensuremath{#1}}}
+\newcommand{\cajaResultado}[1]{\fcolorbox{orange}{white}{\ensuremath{\displaystyle#1}}}
+            
 
 % Estrellita para hacer llamadas de atención, viene en divertidos colores
 % para coleccionar.
